--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
 Hello World
+Slope - [Visit](https://1kh0.github.io/projects/slope/index.html)
+Territorial.io - [visit](https://clockmantellstime.github.io/unblocked/territorial.html)
